force-app/main/default/objects/Ligne_de_commande__c/Ligne_de_commande__c.object-meta.xml
<CustomObject>
    <label>Ligne de commande</label>
    <nameField>
        <displayFormat>LC-{000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lignes de commande</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>