force-app/main/default/objects/Ligne_de_commande__c/fields/A_refaire__c.field-meta.xml
<CustomField>
    <fullName>A_refaire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A refaire</label>
    <type>Checkbox</type>
</CustomField>