force-app/main/default/objects/Ligne_de_commande__c/fields/Bandeau__c.field-meta.xml
<CustomField>
    <fullName>Bandeau__c</fullName>
    <formula>IF(ISBLANK(Ligne__r.Bandeau_m_tallique__c),&quot;&quot;,&quot;- Bandeau:&quot; + Ligne__r.Bandeau_m_tallique__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bandeau</label>
    <type>Text</type>
</CustomField>