force-app/main/default/objects/Ligne_de_commande__c/fields/Business_case__c.field-meta.xml
<CustomField>
    <fullName>Business_case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business case</label>
    <referenceTo>Business_case__c</referenceTo>
    <relationshipLabel>Lignes de commande</relationshipLabel>
    <relationshipName>Lignes_de_commande</relationshipName>
    <type>Lookup</type>
</CustomField>