force-app/main/default/objects/Ligne_de_commande__c/fields/Cat_gorie__c.field-meta.xml
<CustomField>
    <fullName>Cat_gorie__c</fullName>
    <formula>TEXT(Business_case__r.Ecran__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ecran</label>
    <type>Text</type>
</CustomField>