force-app/main/default/objects/Ligne_de_commande__c/fields/Code_product__c.field-meta.xml
<CustomField>
    <fullName>Code_product__c</fullName>
    <formula>Produit__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code product</label>
    <type>Text</type>
</CustomField>