force-app/main/default/objects/Ligne_de_commande__c/fields/Comp2__c.field-meta.xml
<CustomField>
    <fullName>Comp2__c</fullName>
    <description>IF( OR(ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Résine&quot;),ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Stellite&quot;)),&quot; REMPLACER &quot;,&quot;&quot;) + 
IF( OR(ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Résine&quot;),ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Stellite&quot;),ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Couronne&quot;)), Ligne__r.Liste_des_dents_2__c ,&quot;&quot;)</description>
    <formula>IF( Ligne__r.RecordType.DeveloperName = &quot;Resine&quot;,&quot; REMPLACER &quot;,&quot;&quot;) + 
IF( OR(ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Résine&quot;),ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Stellite&quot;),ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Couronne&quot;)), Ligne__r.Liste_des_dents_2__c ,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comp2</label>
    <type>Text</type>
</CustomField>