force-app/main/default/objects/Ligne_de_commande__c/fields/Complement0_FR__c.field-meta.xml
<CustomField>
    <fullName>Complement0_FR__c</fullName>
    <formula>Comp0__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complement0 FR</label>
    <type>Text</type>
</CustomField>