force-app/main/default/objects/Ligne_de_commande__c/fields/Complement1__c.field-meta.xml
<CustomField>
    <fullName>Complement1__c</fullName>
    <description>IF( OR(ISPICKVAL( Business_case__r.Sous_cran__c  ,&quot;Résine&quot;),ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Stellite&quot;)),&quot; REMOVE &quot;,&quot;&quot;) +  
IF( OR(ISPICKVAL( Business_case__r.Sous_cran__c  ,&quot;Résine&quot;),ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Stellite&quot;),ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Inlay onlay facette&quot;),ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Inlay core&quot;),ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Projet esthétique&quot;)),Ligne__r.Liste_des_dents__c ,&quot;&quot;)</description>
    <formula>IF(  Ligne__r.RecordType.DeveloperName = &quot;Resine&quot;,&quot; REMOVE &quot;,&quot;&quot;) + 
IF( OR(Ligne__r.RecordType.DeveloperName = &quot;Resine&quot;,ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Inlay onlay facette&quot;),ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Inlay core&quot;),ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Projet esthétique&quot;)),Ligne__r.Liste_des_dents__c ,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complement1</label>
    <type>Text</type>
</CustomField>