force-app/main/default/objects/Ligne_de_commande__c/fields/Complement1_FR__c.field-meta.xml
<CustomField>
    <fullName>Complement1_FR__c</fullName>
    <formula>Comp1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complement1 FR</label>
    <type>Text</type>
</CustomField>