force-app/main/default/objects/Ligne_de_commande__c/fields/Complement2__c.field-meta.xml
<CustomField>
    <fullName>Complement2__c</fullName>
    <description>IF( OR(ISPICKVAL( Business_case__r.Sous_cran__c  ,&quot;Résine&quot;),ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Stellite&quot;)),&quot; REPLACE &quot;,&quot;&quot;) +
IF( OR(ISPICKVAL( Business_case__r.Sous_cran__c  ,&quot;Résine&quot;),ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Stellite&quot;),ISPICKVAL( Business_case__r.Sous_cran__c  ,&quot;Couronne&quot;)), Ligne__r.Liste_des_dents_2__c  ,&quot;&quot;)</description>
    <formula>IF( Ligne__r.RecordType.DeveloperName = &quot;Resine&quot;,&quot; REPLACE &quot;,&quot;&quot;) +
IF( OR(ISPICKVAL( Business_case__r.Sous_cran__c  ,&quot;Résine&quot;),ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Stellite&quot;),ISPICKVAL( Business_case__r.Sous_cran__c  ,&quot;Couronne&quot;)), Ligne__r.Liste_des_dents_2__c  ,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complement2</label>
    <type>Text</type>
</CustomField>