force-app/main/default/objects/Ligne_de_commande__c/fields/Complement2_FR__c.field-meta.xml
<CustomField>
    <fullName>Complement2_FR__c</fullName>
    <formula>Comp2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complement2 FR</label>
    <type>Text</type>
</CustomField>