force-app/main/default/objects/Ligne_de_commande__c/fields/Date_previsionnelle__c.field-meta.xml
<CustomField>
    <fullName>Date_previsionnelle__c</fullName>
    <label>Date prévisionnelle</label>
    <type>Date</type>
</CustomField>