force-app/main/default/objects/Ligne_de_commande__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>