force-app/main/default/objects/Ligne_de_commande__c/fields/Embrasure__c.field-meta.xml
<CustomField>
    <fullName>Embrasure__c</fullName>
    <formula>IF(ISBLANK(Ligne__r.Embrasure__c),&quot;&quot;,&quot;- Embrasure:&quot; + Ligne__r.Embrasure__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Embrasure</label>
    <type>Text</type>
</CustomField>