force-app/main/default/objects/Ligne_de_commande__c/fields/Ligne__c.field-meta.xml
<CustomField>
    <fullName>Ligne__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ligne</label>
    <referenceTo>Ligne__c</referenceTo>
    <relationshipLabel>Lignes de commande</relationshipLabel>
    <relationshipName>Lignes_de_commande</relationshipName>
    <type>Lookup</type>
</CustomField>