force-app/main/default/objects/Ligne_de_commande__c/fields/LongID__c.field-meta.xml
<CustomField>
    <fullName>LongID__c</fullName>
    <formula>casesafeid(Produit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LongID</label>
    <type>Text</type>
</CustomField>