force-app/main/default/objects/Ligne_de_commande__c/fields/Maquillage__c.field-meta.xml
<CustomField>
    <fullName>Maquillage__c</fullName>
    <formula>IF(ISBLANK(Ligne__r.Maquillage__c),&quot;&quot;,&quot;- Maquillage:&quot; + Ligne__r.Maquillage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maquillage</label>
    <type>Text</type>
</CustomField>