force-app/main/default/objects/Ligne_de_commande__c/fields/nbDents__c.field-meta.xml
<CustomField>
    <fullName>nbDents__c</fullName>
    <label>nbDents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>