force-app/main/default/objects/Ligne_de_commande__c/fields/Occlusion__c.field-meta.xml
<CustomField>
    <fullName>Occlusion__c</fullName>
    <formula>IF(ISBLANK(Ligne__r.Occlusion__c),&quot;&quot;,&quot;- Occlusion:&quot; + Ligne__r.Occlusion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Occlusion</label>
    <type>Text</type>
</CustomField>