force-app/main/default/objects/Ligne_de_commande__c/fields/Ordonnance__c.field-meta.xml
<CustomField>
    <fullName>Ordonnance__c</fullName>
    <label>Ordonnance</label>
    <referenceTo>Ordonnance__c</referenceTo>
    <relationshipLabel>Lignes de commande</relationshipLabel>
    <relationshipName>Lignes_de_commande</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>