force-app/main/default/objects/Ligne_de_commande__c/fields/Perforation__c.field-meta.xml
<CustomField>
    <fullName>Perforation__c</fullName>
    <formula>IF(ISBLANK(Ligne__r.Perforation__c),&quot;&quot;,&quot;- Perforation:&quot; + Ligne__r.Perforation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Perforation</label>
    <type>Text</type>
</CustomField>