force-app/main/default/objects/Ligne_de_commande__c/fields/Point_de_contact__c.field-meta.xml
<CustomField>
    <fullName>Point_de_contact__c</fullName>
    <formula>IF(ISBLANK(Ligne__r.Point_de_contact__c),&quot;&quot;,&quot;- Point de contact:&quot; + Ligne__r.Point_de_contact__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Point de contact</label>
    <type>Text</type>
</CustomField>