force-app/main/default/objects/Ligne_de_commande__c/fields/PreferencesFR__c.field-meta.xml
<CustomField>
    <fullName>PreferencesFR__c</fullName>
    <formula>IF( Produit__r.Accepte_les_pr_f_rences__c ,Occlusion__c + Profil_d_mergence__c + Trac_de_stellite__c + Point_de_contact__c + Perforation__c + Maquillage__c + Embrasure__c + Bandeau__c,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PreferencesFR</label>
    <type>Text</type>
</CustomField>