force-app/main/default/objects/Ligne_de_commande__c/fields/Prefs__c.field-meta.xml
<CustomField>
    <fullName>Prefs__c</fullName>
    <label>Prefs</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>