force-app/main/default/objects/Ligne_de_commande__c/fields/Prefs_EN__c.field-meta.xml
<CustomField>
    <fullName>Prefs_EN__c</fullName>
    <label>Prefs (EN)</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>