force-app/main/default/objects/Ligne_de_commande__c/fields/ProdCol1__c.field-meta.xml
<CustomField>
    <fullName>ProdCol1__c</fullName>
    <formula>IF( OR(ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Couronne&quot;),ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Couronne sur implant&quot;),ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Appareil&quot;)), SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(UPPER(TEXT( Ligne__r.Liaison__c )),&quot;UNITAIRE&quot;,&quot;UNITARY 单冠&quot;),UPPER(&quot;Solidarisé&quot;),&quot;SOLDER 连体&quot;),UPPER(&quot;Bridge&quot;),&quot;BRIDGE 桥体&quot;) ,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>