force-app/main/default/objects/Ligne_de_commande__c/fields/ProdCol2__c.field-meta.xml
<CustomField>
    <fullName>ProdCol2__c</fullName>
    <label>Teeth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>