force-app/main/default/objects/Ligne_de_commande__c/fields/ProdCol2B__c.field-meta.xml
<CustomField>
    <fullName>ProdCol2B__c</fullName>
    <formula>IF( OR(ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Inlay onlay facette&quot;),ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Inlay core&quot;),ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Projet esthétique&quot;),ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Pilier&quot;),ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Barre&quot;)),Ligne__r.Liste_des_dents__c ,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProdCol2B</label>
    <type>Text</type>
</CustomField>