force-app/main/default/objects/Ligne_de_commande__c/fields/ProdCol2C__c.field-meta.xml
<CustomField>
    <fullName>ProdCol2C__c</fullName>
    <formula>IF( OR(ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Résine&quot;),ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Stellite&quot;),ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Couronne&quot;),ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Couronne sur implant&quot;),ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Appareil&quot;),ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Réparations&quot;)), Ligne__r.Liste_des_dents_2__c ,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProdCol2C</label>
    <type>Text</type>
</CustomField>