force-app/main/default/objects/Ligne_de_commande__c/fields/ProdCol3__c.field-meta.xml
<CustomField>
    <fullName>ProdCol3__c</fullName>
    <formula>IF(OR(ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Pilier&quot;),ISPICKVAL( Business_case__r.Sous_cran__c ,&quot;Barre&quot;)),TEXT(Ligne__r.Marque_d_implant__c) + &quot; &quot; + Ligne__r.R_f_rence_d_implant__c + &quot; &quot; + Ligne__r.Diam_tre__c ,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implant description</label>
    <type>Text</type>
</CustomField>