force-app/main/default/objects/Ligne_de_commande__c/fields/Product_name_EN__c.field-meta.xml
<CustomField>
    <fullName>Product_name_EN__c</fullName>
    <formula>Produit__r.Product_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product name (EN)</label>
    <type>Text</type>
</CustomField>