force-app/main/default/objects/Ligne_de_commande__c/fields/Produit__c.field-meta.xml
<CustomField>
    <fullName>Produit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Lignes de commande</relationshipLabel>
    <relationshipName>Lignes_de_commande</relationshipName>
    <type>Lookup</type>
</CustomField>