force-app/main/default/objects/Ligne_de_commande__c/fields/Produit_finition__c.field-meta.xml
<CustomField>
    <fullName>Produit_finition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit finition</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Lignes de commande (Produit finition)</relationshipLabel>
    <relationshipName>Lignes_de_commande1</relationshipName>
    <type>Lookup</type>
</CustomField>