force-app/main/default/objects/Ligne_de_commande__c/fields/Produit_suivant__c.field-meta.xml
<CustomField>
    <fullName>Produit_suivant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit suivant</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Lignes de commande (Produit suivant)</relationshipLabel>
    <relationshipName>Lignes_de_commande2</relationshipName>
    <type>Lookup</type>
</CustomField>