force-app/main/default/objects/Ligne_de_commande__c/fields/Profil_d_mergence__c.field-meta.xml
<CustomField>
    <fullName>Profil_d_mergence__c</fullName>
    <formula>IF(ISBLANK(Ligne__r.Profil_d_mergence__c),&quot;&quot;,&quot;- Profil d&apos;émergence:&quot; + Ligne__r.Profil_d_mergence__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profil d&apos;émergence</label>
    <type>Text</type>
</CustomField>