force-app/main/default/objects/Ligne_de_commande__c/fields/Trac_de_stellite__c.field-meta.xml
<CustomField>
    <fullName>Trac_de_stellite__c</fullName>
    <formula>IF(ISBLANK(Ligne__r.Trac_de_stellite__c),&quot;&quot;,&quot;- Tracé de stellite:&quot; + Ligne__r.Trac_de_stellite__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tracé de stellite</label>
    <type>Text</type>
</CustomField>