force-app/main/default/objects/Ligne_de_commande__c/fields/Travail__c.field-meta.xml
<CustomField>
    <fullName>Travail__c</fullName>
    <formula>Produit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travail</label>
    <type>Text</type>
</CustomField>