force-app/main/default/objects/Ligne_de_commande__c/fields/txtQuantite__c.field-meta.xml
<CustomField>
    <fullName>txtQuantite__c</fullName>
    <formula>TEXT( Quantite__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>txtQuantite</label>
    <type>Text</type>
</CustomField>